--- a/client/src/Rules.css
+++ b/client/src/Rules.css
@@ -1,6 +1,6 @@
 .Rules-Wrapper {
-  background-color: #fff;
-  border: 4px solid #888;
+  background-color: var(--bg-color);
+  border: 4px solid var(--button-gray);
   border-radius: 1em;
   box-sizing: border-box;
   left: 50%;
@@ -31,9 +31,9 @@
 }
 
 .Rules-Wrapper .Rules-Step-Lead:before {
-  background: #26a69a;
+  background: var(--button-color);
   border-radius: 50%;
-  color: #fff;
+  color: var(--bg-color);
   content: counter(item);
   display: inline-block;
   font-size: 0.8em;
@@ -49,7 +49,7 @@
 }
 
 .Rules-Wrapper .Rules-Step-Explanation {
-  color: #666;
+  color: var(--text-disconnected);
   margin: 0 0 0.15em 1.75em;
 }
 
